Changes - gtag + favicon

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="We8336zdpSjE2jH88dbRSvfbDyIbN9iwJRxnlohtJro" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Simulation and Experimentation Platform for AI Agents "
     />
+    <meta name="keywords" content="AI testing, agent testing, AI simulation, AI Agent Stress Testing , Simplify Agent Testing">
+    <meta name="author" content="NotHotDog">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +28,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>NotHotDog</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FFX2S4LYL2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-FFX2S4LYL2');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
