--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <meta name="keywords" content="AI testing, agent testing, AI simulation, AI Agent Stress Testing , Simplify Agent Testing">
     <meta name="author" content="NotHotDog">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/nothotdog.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
