--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <meta name="keywords" content="AI testing, agent testing, AI simulation, AI Agent Stress Testing , Simplify Agent Testing">
     <meta name="author" content="NotHotDog">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/nothotdog.png" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
